--- a/my-portfolio/src/components/NavbarStyle.css
+++ b/my-portfolio/src/components/NavbarStyle.css
@@ -3,8 +3,15 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem  ;
+    position: fixed;
+    width: 100%;
+    height: 90px;
+    z-index: 10;
 }
-
+.header-bg{
+    background-color: rgba(0, 0, 0, 0.9);
+    transition: 0.5s;
+}
 .nav-menu{
     display:flex;
 }
@@ -22,7 +29,7 @@
     display: none;
 }
 
-@media screen and (max-width:2040px){
+@media screen and (max-width:640px){
     .nav-menu{
         flex-direction: column;
         justify-content: center;
@@ -38,7 +45,7 @@
     }
 
     .nav-menu.active{
-        left: 0;
+        left: 100;
     }
 
     .nav-menu li{
